fixed stage 2 connect button spacing

--- a/css/sketch.css
+++ b/css/sketch.css
@@ -103,7 +103,7 @@
     position: absolute;
     overflow: hidden;
     left: 47px;
-    top: 78px;
+    top: 50px;
     width: 651px;
     height: 240px;
     background: transparent url(../img/templ_bg.png) no-repeat center center;
@@ -202,7 +202,7 @@
 
 .orderCover {
     position: absolute;
-    top: -34px;
+    top: -53px;
     font-size: 25px;
     right: 0px;
 }
